2003-06-06  Pavel Roskin  <proski@gnu.org>

	* lib/mc.ext.in: Don't run compressed logs from /var/log through
	nroff.  Suggested by Alfie Costa <agcosta@gmx.net>

2003-05-16  Marco Ciampa  <ciampix@libero.it>

	* syntax/ruby.syntax: upgrade
	* syntax/perl.syntax: small fix

2003-05-14  Marco Ciampa  <ciampix@libero.it>

	* syntax/ruby.syntax: New file - syntax for Ruby.
	* syntax/Syntax: Add ruby.syntax.
	* syntax/Makefile.am: Likewise.

2003-05-08  Pavel Roskin  <proski@gnu.org>

	* mc.spec.in: Strip pre-1998 changelog to work around a bug in
	rpm 4.2, which doesn't like %install inside %changelog.

2003-04-29  Pavel Roskin  <proski@gnu.org>

	* configure.in: Add vfs/extfs/iso9660 to AC_CONFIG_FILES.
	* lib/mc.ext.in: Add support for ISO images.

2003-03-31  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* syntax/Syntax: Highlight *.mc as a makefile.
	* syntax/sql.syntax: Add more keywords for PostgreSQL.

2003-03-21  Pavel Roskin  <proski@gnu.org>

	* syntax/sh.syntax: Highlight "find".  Highlight whole string
	after "#!".  Make unrecognized text inside `` less bright.

2003-03-17  Marco Ciampa  <ciampix@libero.it>

	* doc/it/mc.1.in: Some manual fixes.

2003-03-14  Pavel Roskin  <proski@gnu.org>

	* syntax/c.syntax: Allow integer specifiers for %x and %X in C
	format strings.
	* syntax/cs.syntax: Likewise.
	* syntax/java.syntax: Likewise.
	* syntax/ml.syntax: Likewise.
	* syntax/php.syntax: Likewise.
	* syntax/python.syntax: Likewise.
	* syntax/slang.syntax: Likewise.
	* syntax/swig.syntax: Likewise.

2003-03-11  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_ASM_LABELS): New macro to work around a bug
	gettext.  Define _INTL_REDIRECT_MACROS if needed.
	* configure.in: Use MC_ASM_LABELS.

2003-03-07  Pavel Roskin  <proski@gnu.org>

	* configure.in: Add --with-glib-static option.

2003-03-06  Pavel Roskin  <proski@gnu.org>

	* syntax/spec.syntax: Add BuildArch.

2003-03-05  Pavel Roskin  <proski@gnu.org>

	* configure.in: Check availability of setsid().
