@@ -3,6 +3,7 @@ After version 4.6.0.
 Add --with-glib12 option to configure to force using glib 1.2.x.
 libX11 is loaded dynamically using gmodule if possible.
 Screen saving is now supported on FreeBSD console.
+Support for SCO UNIX has been removed.
 User is warned if one mc is run from another.
 
 Version 4.6.0.
